welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: not found: value num
		if( num(i+1)==nums(i)+5 &&      (nums(i)-nums(i+2))             <=2)
                    ^